--- a/style.css
+++ b/style.css
@@ -1,83 +1,16 @@
-.sidebar {
-  z-index: 1000;
-  position: fixed;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 200px;
-  background-color: #eee;
-  overflow-y: auto;
-}
-
-/* 
-.grid-container {
-  position: absolute;
-  top: 0;
-  left: 200px;
-  bottom: 0;
-  right: 0;
-  background-color: #fff;
-  overflow: hidden;
-}
-
-.grid {
-  position: absolute;
-  width: 1000px;
-  top: 20px;
-  left: 20px;
-  transform: skewX(-30deg);
-  transform-style: preserve-3d;
+#sidebar {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
-.tile {
-  background: red;
-  width: 200px;
-  height: 200px;
-} */
-
-* {
-  box-sizing: border-box;
+.building {
+  margin: 5px;
+  width: 50px;
+  height: 50px;
+  border: 1px solid black;
+  cursor: pointer;
 }
 
-body,
-html {
-  color: #ccc;
-  background: #262626;
-  font-family: monospace;
-  height: 100%;
-  width: 100%;
-  font-size: 13pt;
-}
-
-.wrapper {
-  z-index: 1;
-  position: absolute;
-  width: 590px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.floor {
-  -webkit-transform: rotateX(55deg) rotateZ(45deg);
-  -webkit-transform-style: preserve-3d;
-  font-size: 0;
-}
-
-.floor .tile {
-  font-size: 11pt;
-  color: #ccc;
-  display: inline-block;
-  background: #111;
-  width: 48px;
-  height: 48px;
-  margin: 0;
-  box-shadow: 0 0 0 0.1em hsla(0, 0%, 0%, 0.2);
-  border: solid 1px gray;
-  line-height: 48px;
-  text-align: center;
-  position: relative;
-  vertical-align: top;
+canvas {
+  background-color: blue;
 }
